# embroideryestimator

./: .replit  2026-01-18-pls-examine-desktop-to-view-stratumweb-and-its-pro.txt  MandR_4975fdea-059e-4c19-a330-fc783a60b318.png.avif  main.py  pyproject.toml  replit.nix
.streamlit/: config.toml
attached_assets/: Pasted--Embroidery-Cost-Calculator-New-Calculation-History-Machine-Configuration-Active-Heads-More-act-1740448655324.txt  Pasted-Develop-me-an-embroidery-price-calculator-in-streamlit-using-pyembroidery-module-I-want-to-see-the-1740435131189.txt  Pasted-Okay-let-s-tackle-this-embroidery-price-calculator-project-The-user-wants-a-Streamlit-app-using-py-1740435175670.txt  dst_analyzer.py
styles/: custom.css
utils/: cost_calculator.py  database.py  design_analyzer.py  export.py  pdf_generator.py
