[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyembroidery>=1.5.1",
    "reportlab>=4.3.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
]
